--- a/src/app/features/patients/patient-manager/tooth-viewer/tooth-viewer/tooth-viewer.component.scss
+++ b/src/app/features/patients/patient-manager/tooth-viewer/tooth-viewer/tooth-viewer.component.scss
@@ -24,13 +24,9 @@
       height: auto;
 
       &-content {
-        background: $input-primary;
+        background: $primary;
         display: block;
       }
     }
-  }
-
-  .w-75vw {
-    width: 75vw;
   }
 }
