--- a/src/app/onboarding/login/login.component.html
+++ b/src/app/onboarding/login/login.component.html
@@ -27,6 +27,6 @@
         formControlName="password"
         [placeholder]="'Password'"/>
     </span>
-    <button pRipple (click)="login()" pButton class="p-button-lg default">Login</button>
+    <button pRipple (click)="login()" pButton class="p-button-lg default">{{ 'button.login' | translate }}</button>
   </form>
 </div>
