--- a/src/app/onboarding/offline/offline.component.html
+++ b/src/app/onboarding/offline/offline.component.html
@@ -3,6 +3,6 @@
     <p class="m-0 text-3xl font-light text-white-alpha-40 ">We've lost</p>
     <p class="m-0 text-3xl font-bold text-white-alpha-90">Connection</p>
     <p class="mt-2 font-light text-sm text-white-alpha-40">Please check your internet connection and try again</p>
-    <button pRipple (click)="tryAgain()" class="p-button font-bold">TRY AGAIN</button>
+    <button pRipple (click)="tryAgain()" class="p-button font-bold">{{ 'button.try_again' | translate }}</button>
   </div>
 </div>
