--- a/src/app/shared/panel/panel.component.html
+++ b/src/app/shared/panel/panel.component.html
@@ -1,6 +1,6 @@
-<div class="h-screen w-16rem shadow-6">
+<div class="h-full w-16rem shadow-6">
   <div class="p-4 flex">
-    <img src="assets/images/dentique-logo.png" class="w-5rem">
+    <img src="assets/images/dentique-logo.png" alt="Logo" class="w-5rem">
     <div class="flex flex-column justify-content-center mt-5">
       <span class="text-white-alpha-90 text-xl cursor-pointer">Moograine's</span>
       <span class="text-white-alpha-90 text-xl cursor-pointer pl-3">Clinic</span>
@@ -8,24 +8,32 @@
   </div>
   <div class="px-4 pt-8 text-white-alpha-80">
     <h3 class="typewriter">
-      Welcome, Dr. Moograine!
+      {{ 'menu.welcome' | translate }}, Dr. Moograine!
     </h3>
-    <div class="hover:text-white-alpha-90 slide-in">
-      <div class="flex cursor-pointer" (click)="navigateToAppointments()">
-        <i class="pi pi-list mr-1 text-xs pt-1"></i>
-        <span class="consolas">Appointments</span>
+    <div class="flex flex-column gap-1">
+      <div class="hover:text-white-alpha-90 slide-in">
+        <div class="flex cursor-pointer" (click)="navigateToAppointments()">
+          <i class="pi pi-list mr-1 text-xs pt-1"></i>
+          <span class="consolas">{{ 'menu.appointments' | translate }}</span>
+        </div>
       </div>
-    </div>
-    <div class="my-1 hover:text-white-alpha-90 slide-in">
-      <div class="flex cursor-pointer" (click)="openSettings()">
-        <i class="pi pi-cog mr-1 text-xs pt-1"></i>
-        <span class="consolas">Settings</span>
+      <div class="hover:text-white-alpha-90 slide-in">
+        <div class="flex cursor-pointer" (click)="navigateToPatientManager()">
+          <i class="pi pi-list mr-1 text-xs pt-1"></i>
+          <span class="consolas">{{ 'menu.patient_manager' | translate }}</span>
+        </div>
       </div>
-    </div>
-    <div class="hover:text-white-alpha-90 slide-in">
-      <div class="flex cursor-pointer" (click)="logout()">
-        <i class="pi pi-sign-out mr-1 text-xs pt-1"></i>
-        <span class="consolas">Logout</span>
+      <div class="hover:text-white-alpha-90 slide-in">
+        <div class="flex cursor-pointer" (click)="navigateToSettings()">
+          <i class="pi pi-cog mr-1 text-xs pt-1"></i>
+          <span class="consolas">{{ 'menu.settings' | translate }}</span>
+        </div>
+      </div>
+      <div class="hover:text-white-alpha-90 slide-in">
+        <div class="flex cursor-pointer" (click)="logout()">
+          <i class="pi pi-sign-out mr-1 text-xs pt-1"></i>
+          <span class="consolas">{{ 'menu.logout' | translate }}</span>
+        </div>
       </div>
     </div>
   </div>
