--- a/src/app/shared/panel/panel.component.scss
+++ b/src/app/shared/panel/panel.component.scss
@@ -44,16 +44,20 @@
 }
 
 .slide-in {
-  &:nth-child(2) {
+  &:nth-child(1) {
     animation: slide-in 1s forwards;
   }
 
-  &:nth-child(3) {
+  &:nth-child(2) {
     animation: slide-in 1.5s forwards;
   }
 
-  &:nth-child(4) {
+  &:nth-child(3) {
     animation: slide-in 2s forwards;
+  }
+
+  &:nth-child(4) {
+    animation: slide-in 2.25s forwards;
   }
 }
 
@@ -62,11 +66,11 @@
     border: none;
 
     .p-dialog-header {
-      background: $input-primary;
+      background: $primary;
     }
 
     .p-dialog-content {
-      background: $input-primary;
+      background: $primary;
     }
   }
 }
