--- a/src/assets/styles/default.scss
+++ b/src/assets/styles/default.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif; // Use 'Roboto' as the font-family
+  font-family: 'Roboto', sans-serif;
 
   textarea {
     resize: none;
